<resources>
    <string name="app_name">VOPET</string>

    <string name="username">Username</string>
    <string name="checkbox_rmb">Remember me?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="text1">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="confirm_pw">Confirm passsword</string>
    <string name="have_account">Have an account?</string>

    <string-array name="spinner_data">
        <item>Visited</item>
        <item>Created</item>
    </string-array>

    <string-array name="study_modes">
        <item>Flashcard</item>
        <item>Multiple Choice</item>
        <item>Type word</item>
    </string-array>

    <string-array name="accessing_permission">
        <item>Private</item>
        <item>Public</item>
    </string-array>

    <string-array name="editing_permission">
        <item>Owner</item>
        <item>Anyone</item>
    </string-array>

</resources>