<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:src="@drawable/vopet_brand"
            android:layout_gravity="center"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_bg">

            <RelativeLayout
                android:paddingHorizontal="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginTop="10dp"
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/txtUserName"
                    android:inputType="text"
                    android:elevation="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/brand"
                    android:padding="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_shape"
                    android:hint="@string/full_name" />
                <EditText
                    android:id="@+id/txtEmail"
                    android:autofillHints=""
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:elevation="4dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtUserName"
                    android:padding="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_shape"
                    android:hint="@string/email" />

                <EditText
                    android:id="@+id/txtPhoneNumber"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtEmail"
                    android:padding="15dp"
                    android:layout_marginTop="20dp"
                    android:elevation="4dp"
                    android:background="@drawable/border_shape"
                    android:hint="@string/phone_number" />
                <EditText
                    android:id="@+id/txtPassword"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtPhoneNumber"
                    android:padding="15dp"
                    android:elevation="4dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_shape"
                    android:hint="@string/password" />
                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_below="@id/txtPassword"
                    android:elevation="4dp"
                    android:padding="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_shape"
                    android:hint="@string/confirm_pw" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textStyle="bold"
                    android:elevation="4dp"
                    android:textSize="25sp"
                    android:layout_below="@id/txtConfirmPassword"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/border_shape"
                    android:textColor="@color/dark_orange"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignUp"
                    android:layout_marginStart="50dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/have_account"/>
                <TextView
                    android:id="@+id/link_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/btnSignUp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/txt"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_red"
                    android:text="@string/log_in"/>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>
</FrameLayout>